# isae-bots-hn

./: .gitignore  .gitmodules  Diagramme sans nom.drawio  MAE.drawio  Makefile  README.md  launch-pi.sh  launch_desktop.sh  rsyncExcludeList.txt  rsyncFilterList.txt  scp_recent_files.sh  test.py  uploadSourceFiles.sh
dev/: gr_config.cfg  gr_config.ini  gr_init.cfg
dev/Camera/: calibrateAruco.py  calibrate_camera.py  calibration.json  util.py
dev/Camera/test/: calibration_28_01_2024_15_46_40.npz
dev/install/: local_setup.sh  setup.sh
dev/lib/: DO_NOT_EDIT.txt  README.md
dev/lib/br_messages/: CMakeLists.txt
dev/lib/br_trajectories/: CMakeLists.txt  package.xml
dev/lib/br_trajectories/hooks/: br_trajectories.dsv.in
dev/src/: br_actions.py  robot_config.cfg
dev/src/config/: package.xml  setup.cfg
dev/src/control/: package.xml  setup.cfg  setup.py  wiimote_node.py
dev/src/displacement/: DisplacementNode.py  README.md  disp_comm.py  disp_node.py  disp_utils.py  package.xml  setup.cfg  setup.py
dev/src/displacement_test/: README.md  package.xml  setup.cfg  setup.py
dev/src/executive_smach_visualization/: README.md
dev/src/isb/: isb_hal.py  isb_node.py  package.xml  setup.cfg  setup.py
dev/src/lcd/: lcd_node.py  package.xml  points_node.py  setup.cfg
dev/src/message/: CMakeLists.txt  package.xml
dev/src/message/message_utils/: geometry.py
dev/src/message/msg/: CameraObstacleList.msg  CircleObstacle.msg  DisplacementRequest.msg  ProximityMap.msg  RectObstacle.msg  SensorObstacle.msg  SensorObstacleList.msg
dev/src/pathfinder/: CMakeLists.txt  Makefile  package.xml
dev/src/pathfinder/hooks/: pathfinder.sh.in
dev/src/pathfinder/include/: Map.hpp  Obstacle.hpp  Point.hpp  Segment.hpp
dev/src/pathfinder/src/: Map.cpp  ObstacleCircle.cpp  ObstacleRect.cpp  Point.cpp  Segment.cpp  main.cpp  test.cpp
dev/src/pi_script/: br_odos_calibration.py
dev/src/sensors/: SensorsNode.py  package.xml  sensors_node.py  setup.cfg  setup.py
dev/src/sim/: package.xml  setup.cfg  setup.py
dev/src/speaker/: CMakeLists.txt  package.xml  speakerNode.py  speakerTest.py
dev/src/strat/: CMakeLists.txt  TODO.txt  map.xcf  package.xml  setup.cfg  setup.py  strat_const.py  strat_utils.py
dev/src/strat_PR/: README.md
dev/src/top/: CMakeLists.txt  package.xml  (+9 more)
dev/src/uix/: package.xml  setup.cfg  setup.py
dev/src/uix/gui/: GraphNode.py  gui_const.py  gui_msgs.py  gui_node.py  gui_utils.py
dev/src/uix/gui/mvc/: Controller.py  Model.py  View.py
dev/src/uix/gui/mvc/components/: MatchBoard.py
dev/src/uix/gui_new/sim_interface/: interface_const.py  interface_plateau.py
dev/src/uix/log/: echo_logs.py  echo_logs.sh  log_launch.sh  simTerm_rc.sh  term_installer.sh  term_simconfig
dev/src/uix/old_gui/sim_interface/: interface_plateau.py
dev/src/uix/uix/sim_interface/: interface_const.py  interface_plateau.py
doc/: 1.TelechargementCode.md  2.InstallationDocker.md  3.ExecuterCode.md  4.Configurer Raspberry.md  ExecuterCode.md  MAE.drawio  TelechargementCode.md
docker/: Dockerfile.desktop  autosetup.sh  build-isaebots-desktop-img.sh  build-test-img-desktop.sh  colcon_defaults.yaml  dockerfile.base  dockerfile.core  dockerfile.full  dockerfile.pi  dockerfile.pi_new  dockerfile_pi.full  ros_entrypoint.sh
install/: 10-usb-serial.rules
scripts/: GraphNode.py  desktop_simple.launch  gr-desktop.sh  gr_desktop.launch  launchTopServer.sh  master_node.launch  match.launch  remote_control.launch  remote_control.sh  runMasterNode.sh  runMatch.sh  simulator.launch  strat.launch  test.launch
service/: launchTopServer.sh  masterNode.service  match.service  remoteControl.service  topServer.service
(+217 files in other folders)
